--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,9 @@
 @media screen and (max-width: 1350px) {
   .wrapper {
+    width: 100%; }
+  .detail__txt table {
+    width: 100%; }
+  .detail__txt iframe {
     width: 100%; } }
 
 @media screen and (max-width: 800px) {
